# SDL2_Roguelike_Survivor

./: .gitignore  AIComponent.h  AISystem.cpp  AISystem.h  AssetManager.cpp  CMakeLists.txt  Camera.h  CollisionSystem.cpp  CollisionSystem.h  DamageSystem.cpp  DamageTextComponent.h  EnemySpawnerSystem.cpp  EnemySpawnerSystem.h  EntityManager.cpp  EventManager.h  ExperienceOrbComponent.h  FollowSystem.cpp  FollowSystem.h  GameEventSystem.cpp  GameOverState.cpp  GameStateMachine.h  GoldCoinComponent.h  HealthComponent.h  HealthSystem.cpp  HealthSystem.h  IGameState.h  InputHandler.cpp  LevelSystem.cpp  LevelSystem.h  MainMenuState.cpp  Makefile.web  Map.cpp  Map.h  PlayState.cpp  PlayState.h  PlayerControllerComponent.h  PlayerInputSystem.cpp  README.md  RangedAIComponent.h  RangedAISystem.cpp  (+27 more)
.github/workflows/: deploy-web.yml  deploy.yml
Asset/: map1.map.txt
Headers/Components/Core/: ColliderComponent.h
Headers/Components/Gameplay/: LevelComponent.h  LootDropComponent.h  ProjectileComponent.h  ScoreValueComponent.h  WeaponComponents.h
Headers/Core/: Engine.h  Entity.h  IComponent.h  InputHandler.h
Headers/Events/: Event.h  PlayerEvents.h
Headers/Managers/: AssetManager.h  EntityManager.h
Headers/States/: GameOverState.h  MainMenuState.h  PauseState.h  PlayState.h  UpgradeShopState.h
Headers/Systems/Core/: ProjectileSystem.h  RenderSystem.h
Headers/Systems/Gameplay/: DamageSystem.h  GameEventSystem.h  LootSystem.h  PlayerInputSystem.h  TileEffectSystem.h  UpgradeSystem.h  WeaponControlSystem.h
Headers/Utils/: Map.h  PerlinNoise.h  Vector2D.h
Sources/Components/Core/: ColliderComponent.cpp
Sources/Core/: Camera.cpp  Engine.cpp  Timer.cpp
Sources/States/: GameStateMachine.cpp  MainMenuState.cpp  PauseState.cpp  PlayState.cpp  UpgrdateShopState.cpp
Sources/Systems/Core/: CollisionSystem.cpp  ProjectileSystem.cpp  SaveSystem.cpp  TimeRenderSystem.cpp
Sources/Systems/Gameplay/: EnemySpawnerSystem.cpp  LootSystem.cpp  WeaponControlSystem.cpp
Sources/Systems/UI/: TextRenderSystem.cpp
